samples/_failures_safe/1761040585_9117e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74b51ac9.c: In function ‘main’:
./samples/SAFE/__tmp_74b51ac9.c:152:44: error: expected ‘)’ at end of input
  152 |         printf("%-15s\t%d\n", words[i].word
      |               ~                            ^
      |                                            )
./samples/SAFE/__tmp_74b51ac9.c:152:9: error: expected declaration or statement at end of input
  152 |         printf("%-15s\t%d\n", words[i].word
      |         ^~~~~~
./samples/SAFE/__tmp_74b51ac9.c:152:9: error: expected declaration or statement at end of input
